chore: updated code for spring 3 and latest spring cloud config